229449 Tidy up heap dump acquire - allow spaces in jps path